fixed landing page layout issue on intro

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -1,7 +1,7 @@
 .showcase {
   top: 0;
   right: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   padding: 0px 200px 0px 200px;
@@ -13,8 +13,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
   opacity: 0.8;
 }
@@ -23,8 +23,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #778b6b;
   mix-blend-mode: overlay;
 }
@@ -47,6 +47,7 @@
 
 .intro {
   display: flex;
+  height: 100vh;
   flex-direction: column;
   position: relative;
   padding: 0px 200px 0px 200px;
@@ -61,8 +62,8 @@
 
 .intro .calendarPic {
   position: absolute;
-  width: 63%;
-  top: -18%;
+  width: 60%;
+  top: -12%;
   right: -10%;
   z-index: 1;
 }
@@ -74,12 +75,12 @@
 }
 
 .intro h1 {
-  font-size: 3.1em;
+  font-size: 2.5vw;
   font-weight: 0;
   line-height: 2em;
 }
 
 .intro p {
-  font-size: 1.3em;
+  font-size: 1.2vw;
   font-weight: 800;
 }
